argocd/apps/traefik/resources/traefik_ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.local.pleejr.org`)
    kind: Rule
    middlewares:
    - name: traefik-dashboard-basicauth
      namespace: traefik
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-cert-prod
